# LiquiTask

./: .eslintrc.json  .gitattributes  .gitignore  AGENTS.md  App.tsx  CLAUDE.md  DRAG_AND_DROP_ANALYSIS.md  README.md  biome.json  electrobun.config.ts  electron.d.ts  electron.vite.config.ts  final_test_results.txt  final_verification_results.txt  index.css  index.html  index.tsx  liquitask_template.json  metadata.json  package-lock.json  package.json  tailwind.config.js  test_full_log.txt  test_output.txt  test_results.txt  tsconfig.json  tsconfig.tsbuildinfo  types.ts  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.electrobun-shims/: powershell.cmd
.github/: release-drafter.yml
.github/workflows/: build.yml  (+5 more)
components/: CLAUDE.md  ConfirmDialog.tsx  Dashboard.tsx  EditProjectModal.tsx  LiquidButton.tsx  ModalWrapper.tsx  ProjectModal.tsx  SettingsModal.tsx  Sidebar.tsx  TaskCard.tsx  TaskFormModal.tsx  TitleBar.tsx  Toast.tsx  Tooltip.tsx  index.ts
conductor/: ai-task-assistant-workspace-plan.md  ai-task-assistant.md  ollama-list-models.md
docs/: SIGNING.md  electrobun-rcedit-issue.md  electrobun-rcedit-pr.md  electrobun-rcedit-upstream.diff  electrobun-rcedit-upstream.md
electron/: CLAUDE.md  main.cts  main.ts  preload.cts  preload.ts  tsconfig.json
scripts/: electrobun.cjs  post-build.ts  pre-build.ts
src/: CLAUDE.md  images.d.ts  index.ts  runtime.d.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+218 files in other folders)
